--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.8",
+    "nodemailer-smtp-transport": "^2.7.4",
+    "randomstring": "^1.2.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
