--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.8",
     "nodemailer-smtp-transport": "^2.7.4",
     "randomstring": "^1.2.2"
