--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "migrate": "npx prisma migrate dev",
+    "migrate-fresh": "npx prisma migrate reset"
   },
   "keywords": [],
   "author": "",
@@ -24,10 +26,12 @@
     "randomstring": "^1.2.2"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^9.1.6",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.3",
     "nodemon": "^2.0.19",
     "prisma": "^3.15.2",
+    "prisma-erd-generator": "^1.2.0",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
   }
