--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.8",
     "nodemailer-smtp-transport": "^2.7.4",
-    "randomstring": "^1.2.2"
+    "randomstring": "^1.2.2",
+    "socket.io": "^4.5.3"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^9.1.6",
