--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@prisma/client": "^3.15.2",
     "bcrypt": "^5.0.1",
+    "bull": "^4.10.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -27,7 +28,7 @@
     "socket.io": "^4.5.3"
   },
   "devDependencies": {
-    "@mermaid-js/mermaid-cli": "^9.1.6",
+    "@types/bull": "^4.10.0",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.3",
     "nodemon": "^2.0.19",
