--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.ts",
+    "serve" : "node ./js/server.js",
     "build": "tsc",
     "migrate": "npx prisma migrate dev",
     "migrate-fresh": "npx prisma migrate reset"
@@ -28,7 +29,6 @@
     "socket.io": "^4.5.3"
   },
   "devDependencies": {
-    "@types/bull": "^4.10.0",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.3",
     "nodemon": "^2.0.19",
